# Speaky

./: .gitignore  IMPLEMENTATION_PLAN.md  build.gradle.kts  gradle.properties  privacy-policy.html  settings.gradle.kts
.kotlin/metadata/kotlinTransformedMetadataLibraries/: io.github.aakira-napier-2.7.1-commonMain-UpJokw.klib  io.github.aakira-napier-2.7.1-darwinMain-EnitAw.klib  network.chaintech-sdp-ssp-compose-multiplatform-1.0.6-commonMain-aIScdQ.klib  network.chaintech-sdp-ssp-compose-multiplatform-1.0.6-iosMain-qug-Tw.klib  org.jetbrains.kotlinx-kotlinx-collections-immutable-0.4.0-commonMain-TGfXiA.klib  org.jetbrains.kotlinx-kotlinx-collections-immutable-0.4.0-nativeMain-TGfXiA.klib
androidApp/: build.gradle.kts  google-services.json  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
composeApp/: build.gradle.kts
docs/: daily-words-notification-plan.md  english_app_brd.md
gradle/: libs.versions.toml
iosApp/: SplashScreen.storyboard
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt
logos/: generate_icons.py
play store images/: make_feature_graphics.py  make_screenshots.py  make_tablet_screenshots.py
scripts/: .scrape_cache.json  apply_combined_meanings.py  apply_flagged_sentences.py  failed_words.json  fetch_sentences.py  flag_unchanged_words.py  flagged_words.json  generate_sentences.py  quality_report.txt  scrape_vocabulary.py  test_sentences.py  update_all_vocabulary.py
(+194 files in other folders)
